(fix (projects section):implement flex wrap adding projects images projects names [finishes(projects names,projects names)]

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body{
  
-    height: 80vh;
+    height: 100vh;
    
     position: relative;
 
@@ -15,50 +15,85 @@ body{
   
   } 
  
+  
+/* navigation bar */
+  
+.topnav {
+  margin-top:5px;
+  position:fixed;
+  width:100%;
+  margin-top:0px;
+  position:fixed;
+  background-color:rgba(244, 189, 0, 0.99);
+}
 
-  
-  .logo{
-    float:left;
-    color:#EF3F19;
-    font-size:38px;
-    margin-left:40px;
+.topnav a {
+  float: left;
+  display: block;
+  color:#EF3F19;
+  font-weight: 800;
+  text-align: left;
+  padding: 14px 12px;
+  text-decoration: none;
+  font-size: 17px;
+  margin-left: 30px;
+}
 
-  }
-  
-      
-  /*navigation menus*/
-  nav {
-    padding-top:0px;
-    width:100%;
-   margin-top:20px;
+.topnav a.active {
+  color:pink;
+  padding-right: 13%;
+}
+.topnav a.deactive {
+  float: right;
+  padding-left: 10px;
+}
+.topnav a.desactive {
+  float: right;
+  padding-left: 10px;
+}
+.topnav .icon {
+  display: none;
+}
 
-  
-      
+@media only screen and (max-width: 529px) {
+  .topnav a:not(:first-child) {
+    display: none;
   }
-  
-  nav>ul {
-    text-align: right;
-  }
-  
-  nav>ul>li {
-    display: inline-block;
-  }
-  
-  nav ul li a {
-    box-sizing:border-box;
-    margin-left: 20px;
-    margin-right:20px;
-    text-transform: uppercase;
-    text-decoration: none;
+  .topnav a.icon {
+    float: right;
     display: block;
-    color:#EF3F19;
-    font-family:poppins;
-    font-size:normal;
-    Font-weight:1000;
-    position:relative;
-    font-weight: 200;
-     
+    background-color: white;
+    padding-bottom: 8%;
   }
+}
+
+@media only screen and (max-width: 529px) {
+  .topnav.responsive {
+    position: relative;
+    background-color: #f1f1f1;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: wheat;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    background-color: #f1f1f1;
+    color:#EF3F19 ;
+  }
+}
+@media only screen and (max-width: 529px) {
+  .topnav {
+    border-bottom-style: solid;
+    border-bottom-color: #f2f2f2;
+  
+  }
+}
+ 
   
   /* Centering text over background image */
   
@@ -124,6 +159,14 @@ body{
    
 
  }
+
+@media only screen and (max-width:529px){
+  .about{
+    display:flex;
+    flex-direction:column;
+ 
+  }
+}
  
   .about .left{
   margin-top:40px;
@@ -161,6 +204,13 @@ body{
    margin-right: 180px;
   
  }
+ @media only screen and (max-width:529px){
+  .myServices{
+    display:flex;
+    flex-direction:column;
+ 
+  }
+}
  .myServices .left{
   width:30%;
   
@@ -195,13 +245,39 @@ body{
    font-size:18px;
  }
  #projects{
-  padding-top:30px;
   background-color:#F4BD00;
-  height: 130vh;
+  height: 120vh;
   font-size:24px;
   font-family:Roboto;
   padding-left:100px;
+  color:white;
+ }
 
+.myprojects{
+  display:flex;
+  padding:30vh;
+  flex-wrap:wrap;
+  margin-top:-30vh;
+
+}
+.myprojects>div{
+  margin:12px;
+  
+}
+.myprojects .proj{
+
+  color:#EF3F19;
+  text-align:center;
+  margin-top:-10px;
+  margin-bottom:12px;
+
+}
+.myprojects h2{
+  color:#EF3F19;
+  text-align:center;
+  margin-top:-5px;
+  /* margin-bottom: -5px; */
+  font-size:24px;
 }
 #projects   input[type="button"] {
   background-color:transparent;
@@ -212,22 +288,23 @@ body{
   border-radius:2px;
   width:600px;
   height: 50px;
-  margin-top: 30px;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   font-size: 20px;
   text-align: center;
-  margin-left: auto;
+  justify-content: center;
+  margin-right: 250px;
   font-weight: 300px;
 
 }
 #clients{
   padding-top:50px;
   background-color:#F49200;
-  height: 70vh;
+  height: 90vh;
   font-size:24px;
   font-family:Roboto;
   padding-left:100px;
+  color:white;
 
 }
 #contact{
@@ -236,15 +313,98 @@ body{
   background-image:url("../images/background.png");
   height:80vh;
 }
+.contactMe{
+  height: 70vh;
+  display: flex;
+  padding-top: 100px;
+}
+.contactMe .left{
+width: 50%;
+}
+.contactMe .right{
+width:50%;
+}
+.contactMe form{
+  background-color:#F49200;
+  height:55vh;
+  width:50vh;
+  padding-left:100px;
+  padding-top:30px;
+}
+.contactMe input[type="text"]{
+  width:200px;
+  height:40px;
+  background: rgba(244, 189, 0, 0.99);
+  border-radius: 7px;
+  border:none;
+  margin-bottom: 20px;
+  color:white;
+}
+.contactMe input[type="textarea"]{
+  background-color:#F4BD00 ;
+  width:200px;
+  height:70px;
+  border-radius: 7px;
+  border:none;
+  color:white;
+}
+.contactMe label{
+  color:white;
+}
+.contactMe input[type="button"] {
+  background-color:#EF3F19;
+  color:white;
+  padding: 12px 12px;
+  border: none;
+  border:none;
+  border-radius:7px;
+  width:200px;
+  height: 40px;
+  margin-top: 25px;
+  cursor: pointer;
+  font-size: 20px;
+  text-align: center;
+  margin-left: auto;
+  font-weight: 300px;
+
+}
+
+
+
 #footer{
   background-color:#F49200;
   height:10vh;
 }
 #footer nav {
-  
+  padding-top:0px;
   width:100%;
- margin-top:40px;
+  height:10px;
+ margin-top:5px;
+ background-color:transparent;
     
+}
+#footer nav>ul {
+  text-align:center;
+}
+
+#footer nav>ul>li {
+  display: inline-block;
+}
+
+#footer nav ul li a {
+  box-sizing:border-box;
+  margin-left: 20px;
+  margin-right:20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  color:#EF3F19;
+  font-family:poppins;
+  font-size:normal;
+  Font-weight:1000;
+  position:relative;
+  font-weight: 200;
+   
 }
 
 @media only screen and(max-width: 529px){
@@ -277,19 +437,7 @@ body{
     }
   }
   
-  /* @media only screen and (max-width:529px){
-      .right {
-          width: 300px;
-          height: 40px;
-          margin-top: 200px;
-          font-weight: 700;
-          font-size: 20px;
-          line-height: 150%;
-          margin-left: 27px;
-          color: #f8f8f8;
-  }
-      
-  } */
+
   
 
   
